@startuml
skinparam classAttributeIconSize 0
class RangoMoho {
+ boolean visitar(EstadoPisoNull)
+ boolean visitar(TieneEnergiaPilon)
+ boolean visitar(TieneMoho)
}
class RangoPilon {
+ boolean visitar(EstadoPisoNull)
+ boolean visitar(TieneEnergiaPilon)
+ boolean visitar(TieneMoho)
}
interface ConstruiblePiso {
~ boolean visitar(EstadoPisoNull)
~ boolean visitar(TieneEnergiaPilon)
~ boolean visitar(TieneMoho)
}


ConstruiblePiso <|.. RangoMoho
ConstruiblePiso <|.. RangoPilon
@enduml